[tool.poetry]
name = "dkbl"
version = "0.1.0"
description = ""
authors = ["schuenemann <til.schuenemann@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
pyproject-flake8 = "^0.0.1-alpha.4"
tox = "^3.25.0"
mypy = "^0.950"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
