[tool.poetry]
name = "dkbl"
version = "0.1.0"
description = ""
authors = ["schuenemann <til.schuenemann@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pyproject-flake8 = "^0.0.1-alpha.4"
pytest = "^7.1.2"

[tool.poetry.scripts]
dkbl = "dkbl.dkbl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
